--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 Hello Devops
 <h1> This is second class of Devops </h1
 >
-<h2> This is third class of Devops</h2>
+<h2> This is third class of Devops</h2
+>
+<h3> Modified on third class </h3>
