update-localrepo-fri

--- a/index.html
+++ b/index.html
@@ -8,3 +8,5 @@ Hello Devops
 Modified File
 Changes Made from local git repo
 Changes made from remote repository
+
+Changes made on local repository 13/12/2024
